# PythonProtocolGateway

./: .gitattributes  .gitignore  Dockerfile  MULTIPROCESSING.md  NodeRed.MD  README.md  RELEASE.md  config.cfg.example  config.example.cfg  config.influxdb.example  config.json_out.example  growatt.py  growatt2mqtt.cfg  growatt2mqtt.example.cfg  growatt2mqtt.example.service  growatt2mqtt.py  growatt2mqtt.service  inverter.py  invertermodbustomqtt.example.service  invertermodbustomqtt.py  nodered-example-flow.json  ppg.py  protocol_gateway.example.service  protocol_gateway.py  protocol_settings.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  solarmon.cfg  solarmon.py  solarmon.service  test.py  test_batch_size_fix.py  test_eg4_serial.py  test_fwcode_fix.py  test_json_out.py  variable_screen.example.txt
classes/: Object.py  protocol_settings.py  transport.py
defs/: common.py
docs/: converter.txt
documentation/: README.md
protocols/: .~lock.v0.14.holding_registry_map.csv#  .~lock.v0.14.input_registry_map.csv#  debug.holding_registry_map.csv  debug.json  eg4_3000ehv_v1.holding_registry_map.csv  eg4_v58.holding_registry_map.csv  eg4_v58.input_registry_map.csv  eg4_v58.json  growatt_2020_v1.24.holding_registry_map.csv  growatt_2020_v1.24.input_registry_map.common_names.csv  growatt_2020_v1.24.input_registry_map.csv  growatt_2020_v1.24.json  hdhk_16ch_ac_module.holding_registry_map.csv  hdhk_16ch_ac_module.json  no_names.growatt_2020_v1.24.input_registry_map.csv  no_names.sigineer_v0.11.input_registry_map.csv  notes.txt  pace_bms_v1.3.json  (+14 more)
(+104 files in other folders)
